versioned_docs/version-2023.2.2/sala/bloco_1/laboratorio_de_quimica.mdx
---
slug: /sala/laboratorio_de_quimica
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
const data = {
  title: "Laboratório de Química",
  base: "Bloco 1",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Química 4",
          size: 2,
          teachers: [
            "Felipe Augusto Gorla"
          ],
          classroom: "Laboratório de Química",
          students: [
            "EIN2020"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Química III",
          size: 2,
          teachers: [
            "Felipe Augusto Gorla"
          ],
          classroom: "Laboratório de Química",
          students: [
            "AGO2021"
          ],
          time: "13:10 - 14:00"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Química 3",
          size: 1,
          teachers: [
            "Felipe Augusto Gorla"
          ],
          classroom: "Laboratório de Química",
          students: [
            "EIN2021"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Química 1",
          size: 1,
          teachers: [
            "Felipe Augusto Gorla"
          ],
          classroom: "Laboratório de Química",
          students: [
            "EIN2023"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "Química 2",
          size: 2,
          teachers: [
            "Felipe Augusto Gorla"
          ],
          classroom: "Laboratório de Química",
          students: [
            "EIN2022"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Química I",
          size: 2,
          teachers: [
            "Kathia Regina Kunzler Bechlin"
          ],
          classroom: "Laboratório de Química",
          students: [
            "AGO2023"
          ],
          time: "13:10 - 14:00"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Laboratório de Química

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
